# logic-simulator

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt
Client/content/: index.html
Client/content/js/: index.js
Client/src/cpp/: Main.cpp
Server/: main.cpp
cmake/: BuildClient.cmake  BuildServer.cmake  GetBoost.cmake  GetEmscripten.cmake  GetMingw.cmake  InstallDep.cmake
